<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UAH iSystems</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="sections_array">
        <item>Home</item>
        <item>About</item>
        <item>Officers</item>
        <item>Members</item>
        <item>Information Systems</item>
        <item>Events</item>
    </string-array>
	
	<!--Member Fragment Strings-->
	<string name="members_title">Why become a member of iSystems Club?</string>
	<string name="members_message">By joining the iSystems Club, you can take advantage of the
        numerous programs we offer. \n \n<b>iWorkshops</b> \nEnhance your knowledge with
        hands-on real-world applications using the knowledge learned in class.
        \n\n\t<b>●</b> ADO.Net(Using Databases with ASP.Net)\n\t<b>●</b> Multi-tier Program
        Architecture \n\t<b>●</b> Security+ Preparation \n\t<b>●</b> CSS Layouts\n
        \n<b>Professional Workshops</b> \nLearn skills from real professionals on how to become
        more valuable and productive in the workplace \n\n\t<b>●</b> Resume Building
        \n\t<b>●</b> Interview Tips \n\n<b>Tutoring Sessions</b> \nGet additional help from your
        IS classes with our tutoring sessions hosted by our IS greybeards. \n\n\t<b>●</b> IS
        210 \n\t<b>●</b> IS 310 \n\t<b>●</b> IS 340 \n\n<b>Guest Speakers</b> \nAcquire insider
        information and advice from guest speakers working directly in the
        Information Systems industry. \n\n<b>12@12</b> \nTwelve Club members will have
        the opportunity to go to lunch with an IS professional to discuss his or her career in an
        informal setting. \n\n<b>iGiveback</b> \nStudents will have the opportunity to gain
        real-world and leadership experience by serving non-profit organizations. Projects range
        from website designing to database implementation to network administration.
        \n\n<b>iSocial</b> \nWe want our members to be a close-knit group that help each other in
        school and beyond in the workplace, so come hangout at one of our social events to make
        friends and valuable business connections.</string>

    <string name="home_welcome_title">Welcome</string>
    <string name="home_welcome_message">UAHuntsville\'s iSystems Club is a student organization that
        combines strong business skills with the experience and technical abilities needed to
        compete in today\'s information-based society.\n\nThrough a combination of workshops,
        projects, and team-building exercises, we prepare our members to become some of the most
        competitive forces in the field of Information Systems.\n\nWant to learn more? Be sure to
        check out our \"About Us\" section!</string>

    <string name="about_us_title">About Us</string>
    <string name="about_us_message">UAHuntsville\'s iSystems Club is a student organization that
        combines strong business skills with the experience and technical abilities needed to
        compete in today\'s information-based society. Three of the five fastest-growing occupations
        in the U.S. require a deep understanding of business needs coupled with technical knowledge
        to help organizations succeed and grow.

        \n\nThe iSystems Club prepares you to combine your functional business skills with technology
        skills to diagnose problems and formulate solutions. Members in iSystems Club are
        well-prepared to meet head-on the challenges that companies, non-profits, and governments
        face in the Information Age.</string>

    <string name="officers_president">Kiersten Mace</string>
    <string name="officers_president_info">President \nkrm0012@uah.edu</string>

    <string name="officers_vp_projects">Rachel Gregory</string>
    <string name="officers_vp_projects_info">VP of Projects \nrjg0003@uah.edu</string>

    <string name="officers_treasurer">Kevin Leach</string>
    <string name="officers_treasurer_info">Treasurer \nkbl0003@uah.edu</string>

    <string name="officers_vp_marketing">Alex Sims</string>
    <string name="officers_vp_marketing_info">VP of Marketing \njas0059@uah.edu</string>

    <string name="officers_vp_events">Mitchell Bramlett</string>
    <string name="officers_vp_events_info">VP of Events \nmlb0026@uah.edu</string>

    <string name="information_systems">Information Systems</string>
    <string name="information_systems_description">Students who major in information systems become
        experts in how to use computers to advance an organization\'s goals. Information systems
        professionals help organizations design and use systems for conducting financial
        transactions, managing information about customers and suppliers, and ensuring the security
        of communications. They study how people adapt to new information technologies, and advise
        organizations how to make the most of the information available to them.

        \n\nInformation systems is one of the fastest growing fields in the country. Small
        companies, large companies, not-for-profits, and government agencies - all need information
        systems professionals.</string>
    <string name="information_systems_concentrations">Information Systems Concentrations</string>
    <string name="information_systems_faculty">Faculty</string>
    <string name="information_systems_courses">Information Systems Courses</string>

    <string name="information_systems_course_list">
        • IS 101 - Introduction to Microcomputing
        \n\n• IS 102 - Spreadsheet Applications
        \n\n• IS 103 - Spreadsheet Applications II
        \n\n• IS 104 - Word-processing I
        \n\n• IS 105 - Word-processing II
        \n\n• IS 106 - Presentation Graphics
        \n\n• IS 108 - Database Applications
        \n\n• IS 110 - Introduction to the Internet
        \n\n• IS 112 - Introduction to PC UNIX
        \n\n• IS 114 - Web Publishing Using HTML
        \n\n• IS 146 - Computer Applications in
          \n\t  Business
        \n\n• IS 210 - Introduction to Computer
          \n\t  Programming in Business
        \n\n• IS 301 - Information Systems in
          \n\t  Organizations
        \n\n• IS 310 - Advanced Computer
          \n\t  Programming in Business
        \n\n• IS 340 - Databases for Management
        \n\n• IS 350 - Advanced Data Bases
          \n\t  for Management
        \n\n• IS 400 - Business Intelligent Systems
        \n\n• IS 401 - Introduction to Information
          \n\t  Assurance
        \n\n• IS 416 - Supply Chain Management
          \n\t  and E-Business
        \n\n• IS 420 - Web Portals and Applications
        \n\n• IS 422 - Supply Chain Management
          \n\t  Systems
        \n\n• IS 440 - Web Programming and
          \n\t  Database Integration
        \n\n• IS 460 - Telecommunications and
          \n\t  Networking
        \n\n• IS 463 - Computer Forensics
        \n\n• IS 465 - Web Server and Internet
          \n\t  Telecommunications Technology
        \n\n• IS 470 - Management of the
          \n\t  Microcomputer Environment
        \n\n• IS 477 - Network Defense and
          \n\t  Operating Systems
        \n\n• IS 480 - Current Topics in Management
          \n\t  Information Systems
        \n\n• IS 490 - Special Projects
        \n\n• IS 495 - Internship in
          \n\t  Information Systems
        \n\n• IS 497 - Information Systems Design
          \n\t  and Implementation
        \n\n• IS 499 - Systems Development Project</string>

    <string name="information_systems_faculty_list">
        <b>Chakri Deverapalli</b>
        \nDirector of IT,  Lecturer
        \n329E | 256.824.2124
        \nChakri.Deverapalli@uah.edu

        \n\n<b>Jatinder (Jeet) Gupta</b>
        \nAssociate Dean, Professor
        \n126F | 256.824.6593
        \nJeet.Gupta@uah.edu

        \n\n<b>Wai Yin Mok</b>
        \nAssociate Professor
        \n308 | 256.824.6980
        \nmokw@uah.edu

        \n\n<b>Xiaotong Li</b>
        \nAssociate Professor
        \n307 | 256.824.6762
        \nXiaotong.Li@uah.edu

        \n\n<b>Ravi Patnayakuni</b>
        \nAssociate Professor
        \n319 | 256.824.6155
        \nRavi.Patnayakuni@uah.edu
    </string>

</resources>
