<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <!-- Introduction -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_margin"
            android:textSize="@dimen/text_content"
            android:text="@string/information_systems_description"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_margin"
            android:textSize="@dimen/text_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/information_systems_courses"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_margin"
            android:textSize="16sp"
            android:text="@string/information_systems_course_list"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_margin"
            android:textSize="@dimen/text_title"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/information_systems_faculty"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_margin"
            android:textSize="16sp"
            android:text="@string/information_systems_faculty_list"/>

    </LinearLayout>

</ScrollView>